--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cek COVID-19 Indonesia</title>
+    <title>COVID-19 Indonesia</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta name="description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia."/>
-	<meta name="keywords" content="Cek COVID-19 Indonesia" />
+	<meta name="keywords" content="COVID-19 Indonesia" />
     <meta name="author" content="indrij.vercel.app" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@indrij_" />
-    <meta name="twitter:creator" content="@indrij_" />
-    <meta property="og:title" content="Cek COVID-19 Indonesia" />
+    <meta name="twitter:site" content="@padlikodil" />
+    <meta name="twitter:creator" content="@padlikodil" />
+    <meta property="og:title" content="COVID-19 Indonesia" />
     <meta property="og:type" content="information covid19 website"/>
     <meta property="og:description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia." />
     <meta property="og:image" content="https://cekcovid19id.vercel.app/img/screenshot/index.png" />
@@ -25,7 +25,7 @@
 <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="/">cekcovid19id
+            <a class="navbar-brand" href="/">Covid19id
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -217,7 +217,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-white">
         <div class="container text-center">
-            <span> &copy; indrijunanda</span><br>
+            <span> &copy; itspapoy</span><br>
             <span>Developed use <a href="//getbootstrap.com" >Bootstrap 5</a> and Hosted on <a
                     href="//vercel.com" >Vercel</a></span>
         </div>
