--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="/">Covid19id
+            <a class="navbar-brand" href="/">Covid-19 ( Koronce )
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,8 +48,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 class="title-home">Cek COVID-19 Indonesia</h1>
-                    <p>Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia.</p>
+                    <h1 class="title-home">DATA COVID-19</h1>
+                    <p>Informasi Data Statistik Kasus COVID-19 dan Data Provinsi di Seluruh Indonesia.</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <a href="tel:119" class="card-telp">
@@ -171,7 +171,7 @@
                 </div>
                 <div class="col-lg-7 mt-3">
                     <h4 class="fw-bold">Apa itu COVID-19 ?</h4>
-                    <p>COVID-19 adalah penyakit yang disebabkan oleh virus severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). COVID-19 dapat menyebabkan gangguan sistem pernapasan, mulai dari gejala yang ringan seperti flu, hingga infeksi paru-paru, seperti pneumonia. COVID-19 (coronavirus disease 2019) adalah jenis penyakit baru yang disebabkan oleh virus dari golongan coronavirus, yaitu SARS-CoV-2 yang juga sering disebut virus Corona.</p>
+                    <p> COVID-19 adalah penyakit yang disebabkan oleh virus severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). COVID-19 dapat menyebabkan gangguan sistem pernapasan, mulai dari gejala yang ringan seperti flu, hingga infeksi paru-paru, seperti pneumonia. COVID-19 (coronavirus disease 2019) adalah jenis penyakit baru yang disebabkan oleh virus dari golongan coronavirus, yaitu SARS-CoV-2 yang juga sering disebut virus Corona. “CO” merujuk pada corona, “VI” merujuk pada virus, dan “D” merujuk pada disease atau penyakit.</p>
                     <h4 class="fw-bold">Gejala</h4>
                     <p>Gejala awal infeksi COVID-19 bisa menyerupai gejala flu, yaitu demam, pilek, batuk kering, sakit tenggorokan, dan sakit kepala. Setelah itu, gejala dapat hilang dan sembuh atau malah memberat. Penderita dengan gejala yang berat bisa mengalami demam tinggi, batuk berdahak atau berdarah, sesak napas, dan nyeri dada.</p>
                     <h4 class="fw-bold">Cara Penularan</h4>
