--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                             <div class="row p-3">
                                 <div class="col-lg-12">
                                     <div class="text-center">
-                                        <h3>Ingin berkontribusi di Cek COVID-19 Indonesia ?</h3>
-                                        <p>Silahkan klik <a href="https://github.com/indrijunanda/cekcovid19id" class="anchor-redirect" target="_blank">disini <i class="bi bi-box-arrow-up-right"></i></a></p>
+                                        <h3>Ingin berkontribusi dengan saya ?</h3>
+                                        <p>Silahkan klik <a href="https://instagram.com/itspapoy" class="anchor-redirect" target="_blank">disini <i class="bi bi-box-arrow-up-right"></i></a></p>
                                     </div>
                                 </div>
                             </div>
