--- a/provinsi.html
+++ b/provinsi.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Data Statistik Seluruh Provinsi Cek COVID-19 Indonesia" />
     <meta property="og:type" content="information covid19 website" />
     <meta property="og:description"
-        content="Data Statistik Kasus COVID-19 Untuk Seluruh Provinsi Di Indonesia." />
+     content="Data Statistik Kasus COVID-19 Seluruh Provinsi Di Indonesia." />
     <meta property="og:url" content="https://cekcovid19id.vercel.app/provinsi.html" />
     <meta property="og:image" content="https://cekcovid19id.vercel.app/img/screenshot/provinsi.png" />
     <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
@@ -60,7 +60,7 @@
 
     <footer class="footer mt-auto py-3 bg-white">
         <div class="container text-center">
-            <span> &copy; indrijunanda</span><br>
+            <span> &copy; itspapoy</span><br>
             <span>Developed use <a href="//getbootstrap.com">Bootstrap 5</a> and Hosted on <a
                     href="//vercel.com">Vercel</a></span>
         </div>
