--- a/provinsi.html
+++ b/provinsi.html
@@ -12,8 +12,8 @@
     <meta name="keywords" content="Data Statistik Seluruh Provinsi Cek COVID-19 Indonesia" />
     <meta name="author" content="indrij.vercel.app" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@indrij_" />
-    <meta name="twitter:creator" content="@indrij_" />
+    <meta name="twitter:site" content="@itspapoy" />
+    <meta name="twitter:creator" content="@itspapoy" />
     <meta property="og:title" content="Data Statistik Seluruh Provinsi Cek COVID-19 Indonesia" />
     <meta property="og:type" content="information covid19 website" />
     <meta property="og:description"
@@ -28,7 +28,7 @@
 <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="/">cekcovid19id
+            <a class="navbar-brand" href="/">Covid-19 ( koronce )
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
