--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COVID-19 Indonesia</title>
+    <title>KOPIT-19 ( Koronce )</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta name="description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia."/>
