--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="card mb-3 card-sosmed">
                         <div class="card-body">
-                            <h6>Ikuti Perkembangan Seputar COVID-19 Dari Kemenkes RI</h6>
+                            <h6>Ikuti Itspapoy dalam Kontrobusi Perkembangan Seputar COVID-19 Dengan Kemenkes RI</h6>
                             <div class="d-flex justify-content-end mt-4">
                                 <span>
                                     <a href="//facebook.com/KementerianKesehatanRI" class="fs-2 mx-2 text-card"><i
