--- a/provinsi.html
+++ b/provinsi.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta name="description"
-        content="Data Statistik Kasus COVID-19 Untuk Seluruh Provinsi Di Indonesia." />
+        content="Data Statistik Kasus COVID-19 Seluruh Provinsi Di Indonesia." />
     <meta name="keywords" content="Data Statistik Seluruh Provinsi Cek COVID-19 Indonesia" />
     <meta name="author" content="indrij.vercel.app" />
     <meta name="twitter:card" content="summary_large_image" />
