--- a/provinsi.html
+++ b/provinsi.html
@@ -49,7 +49,8 @@
 
     <main>
         <div class="container">
-            <h3 class="fw-bold">Data Statistik Kasus COVID-19 Seluruh Provinsi Di Indonesia</h3>
+            <h3 class="fw-bold">Data Statistik Kasus COVID-19</h3>
+            <h3 class="fw-bold">COVID-19 Untuk Seluruh Provinsi di Indonesia</h3>
             <div id="terakhir-update"></div>
             <div class="row" id="listnya">
             </div>
