--- a/provinsi.html
+++ b/provinsi.html
@@ -50,7 +50,7 @@
     <main>
         <div class="container">
             <h3 class="fw-bold">Data Statistik Kasus</h3>
-            <h3 class="fw-bold">COVID-19 Untuk Seluruh Provinsi di Indonesia</h3>
+            <h3 class="fw-bold">Covid-19 Untuk Seluruh Provinsi di Indonesia</h3>
             <div id="terakhir-update"></div>
             <div class="row" id="listnya">
             </div>
