--- a/index.html
+++ b/index.html
@@ -205,6 +205,15 @@
                                     <div class="text-center">
                                         <h3>Ingin berkontribusi dengan saya ?</h3>
                                         <p>Silahkan klik <a href="https://instagram.com/itspapoy" class="anchor-redirect" target="_blank">disini <i class="bi bi-box-arrow-up-right"></i></a></p>
+             <div class="row mt-5">
+                <div class="col-lg-12">
+                    <div class="card-kontribusi">
+                        <div class="card-body">
+                            <div class="row p-3">
+                                <div class="col-lg-12">
+                                    <div class="text-center">
+                                        <h3>Jangan Lupa Unduh Aplikasi PeduliLindungi!</h3>
+                                        <p>Silahkan klik <a href="https://instagram.com/itspapoy" class="anchor-redirect" target="_blank">disini <i class="bi bi-box-arrow-up-right"></i></a></p>
                                     </div>
                                 </div>
                             </div>
