--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                             <div class="row p-3">
                                 <div class="col-lg-12">
                                     <div class="text-center">
-                                        <h3>Jangan Lupa Unduh Aplikasi PeduliLindungi!</h3>
-                                        <p>Silahkan klik <a href="https://instagram.com/itspapoy" class="anchor-redirect" target="_blank">disini <i class="bi bi-box-arrow-up-right"></i></a></p>
+                                        <h3>Jangan Lupa Install Aplikasi PeduliLindungi!</h3>
+                                        <p>Silahkan klik <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://play.google.com/store/apps/details%3Fid%3Dcom.telkom.tracencare%26hl%3Den_US%26gl%3DUS%26auao%3Dfalse%26referrer%3Dutm_source%253Dgoogle%2526utm_medium%253Dorganic%2526utm_term%253Dpedulilindungi%2Bapk%26pcampaignid%3DAPPU_1_DKyqYbX2NJvDz7sPrrCvmAc&ved=2ahUKEwi1rJ3-58j0AhWb4XMBHS7YC3MQ44QBegQIAxAI&usg=AOvVaw0IC-hIqLg0cekepilTWK-l" class="anchor-redirect" target="_blank">disini <i class="bi bi-box-arrow-up-right"></i></a></p>
                                     </div>
                                 </div>
                             </div>
