--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KOPIT-19 ( Koronce )</title>
+    <title>KOPIT-19 (Sars-CoV-2)</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta name="description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia."/>
@@ -189,7 +189,7 @@
                         <li><p>Cuci Tangan secara rutin menggunakan air dan sabun atau cairan pembersih tangan berbahan alkohol</p></li>
                         <li><p>Selalu jaga jarak aman. Terutama dengan orang yang batuk atau bersin.</p></li>
                         <li><p>Mengenakan masker jika pembatasan fisik tidak memungkinkan</p></li>
-                        <li><p>Jangan sentuk mata, hidung atau mulut</p></li>
+                        <li><p>Jangan sentuh mata, hidung atau mulut</p></li>
                         <li><p>Saat batuk atau bersin, tutup mulut dan hidung dengan lengan atau tisu</p></li>
                         <li><p>Jangan keluar rumah jika tidak ada kepentingan mendesak atau jika merasa tidak enak badan</p></li>
                         <li><p>Jika demam, batuk atau kesulatan bernapas segera cari bantuan medis.</p></li>
