--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="/">Covid-19 ( Koronce )
+            <a class="navbar-brand" href="/">Covid-19 ( Sars-CoV-2 ) New Omicron.
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="card mb-3 card-sosmed">
                         <div class="card-body">
-                            <h6>Ikuti Itspapoy dalam Kontrobusi Perkembangan Seputar COVID-19 Dengan Kemenkes RI</h6>
+                            <h6>Ikuti Itspapoy dalam Kontribusi Perkembangan Seputar COVID-19 Dengan Kemenkes RI</h6>
                             <div class="d-flex justify-content-end mt-4">
                                 <span>
                                     <a href="//facebook.com/KementerianKesehatanRI" class="fs-2 mx-2 text-card"><i
