--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="/">Covid-19 ( Sars-CoV-2 ) New Omicron.
+            <a class="navbar-brand" href="/">Covid-19 ( New Omicron )
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
